testing collab button

--- a/section-1-context-engineering-foundations/01_Introduction_to_context_engineering.ipynb
+++ b/section-1-context-engineering-foundations/01_Introduction_to_context_engineering.ipynb
@@ -6,7 +6,10 @@
    "source": [
     "![Redis](https://redis.io/wp-content/uploads/2024/04/Logotype.svg?auto=webp&quality=85,75&width=120)\n",
     "\n",
+    "\n",
     "# Introduction\n",
+    "\n",
+    "<a href=\"https://colab.research.google.com/github/redislabs-training/ce-redis-langchain/blob/main/section-1-context-engineering-foundations/01_Introduction_to_context_engineering.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
     "\n",
     "Over the past few years, AI applications have undergone rapid evolution. Early on, engineers built a polite clerk behind a glass window: users would slide a note - \"draft this email,\" \"explain this code\" — and the clerk would read it, scribble an answer, and slide it back. Their answers were generally good, but not always what we wanted. \n",
     "\n",
