adding system context lesson + readme updates for now

--- a/section-1-context-engineering-foundations/02_project_overview.ipynb
+++ b/section-1-context-engineering-foundations/02_project_overview.ipynb
@@ -23,7 +23,11 @@
    "source": [
     "## Course Structure\n",
     "\n",
-    "There are a total of 7 stages in this course to reach the final agent implementation: \n",
+    "There are a total of 8 stages in this course to reach the final agent implementation: \n",
+    "\n",
+    "### Stage 0: Crafting Effective System Prompts\n",
+    "\n",
+    "Before we build onto the agent's capabilities, we'll want to work with system context. It's the easiest context to manage because it is likely if you have written prompts before, it will be the most familiar! In this preliminary stage, you'll learn how to craft effective system instructions that define your agent's role, capabilities, and behavioral constraints. You'll see how a well-crafted system prompt acts as the foundation for all other context.\n",
     "\n",
     "### Stage 1: Baseline RAG\n",
     "\n",
@@ -70,34 +74,6 @@
     "In our final stage, we'll add the final piece by introducing long-term memory, allowing the agent to store and recall user preferences across different sessions.\n",
     "\n",
     "By the end, you'll have a fully functional agent with \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b0d12d30",
-   "metadata": {},
-   "source": [
-    "## How to Use This Course\n",
-    "\n",
-    "The learning flow is simple: read a notebook section to learn the concepts, then apply those concepts in the corresponding stage implementation. For example, after learning about intent classification in Section 4, you'll navigate to `progressive_agents/stage3_full_agent_without_memory` and run `python cli.py \"What courses teach machine learning?\"` to see it in action.\n",
-    "\n",
-    "Each stage includes test files you can run to see expected behavior. Compare implementations as you progress - look at `agent/nodes.py` to see how context assembly evolves, check `agent/workflow.py` to understand execution flow changes, and read each stage's `README.md` for detailed explanations of what changed and why."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2c45d766",
-   "metadata": {},
-   "source": [
-    "## What Makes This Course Different?\n",
-    "\n",
-    "Most agent courses jump straight to complex architectures. This one builds understanding incrementally - each stage isolates ONE new concept, making it easier to grasp and debug.\n",
-    "\n",
-    "More importantly, this course treats context as the primary design consideration, not an afterthought. While other courses focus on tools and workflows, we focus on context quality - because that's what actually determines system quality.\n",
-    "\n",
-    "You're not learning toy examples. Progressive disclosure, hybrid search, and memory management patterns are all battle-tested in production systems. The ReAct stages teach you to build systems you can actually debug and understand - critical for production but often overlooked in educational content.\n",
-    "\n",
-    "Theory and practice stay integrated throughout. Learn a concept in a notebook, immediately apply it in working code. This reinforces understanding better than either approach alone."
    ]
   }
  ],
