--- a/section-1-context-engineering-foundations/05_stage_2_context_engineered_rag.ipynb
+++ b/section-1-context-engineering-foundations/05_stage_2_context_engineered_rag.ipynb
@@ -311,52 +311,24 @@
    "id": "8db7feaf",
    "metadata": {},
    "source": [
-    "### Why is this better?\n",
-    "\n",
-    "1.  **No JSON Syntax**: We removed brackets, quotes, and commas that consume tokens but add no meaning.\n",
-    "2.  **Relevant Fields Only**: We stripped out `created_at`, `updated_at`, and other database fields.\n",
-    "3.  **Readable**: The format `Key: Value` is very natural for the LLM to understand.\n",
-    "\n",
-    "### The Trade-off: \"Flat Retrieval\"\n",
-    "\n",
-    "However, notice what is missing: **The Syllabi.**\n",
-    "\n",
-    "To fit our token budget, we removed the detailed syllabus for *every* course.\n",
-    "*   **Pros**: Fast, cheap, good for summaries.\n",
-    "*   **Cons**: If the user asked *\"What is the reading for Week 3 of the ML course?\"*, this agent **cannot answer**.\n",
-    "\n",
-    "We have moved from \"Too Much Info\" (Stage 1) to \"Just Enough Summary\" (Stage 2). But what if we need details for *just one* course?\n",
-    "\n",
     "## Conclusion\n",
     "\n",
     "Context Engineering is a powerful tool for optimization. By curating our data, we saved money and improved speed.\n",
     "\n",
-    "**Key Takeaways:**\n",
-    "*   **Clean your data**: Remove database artifacts.\n",
-    "*   **Transform your data**: Use formats that are token-efficient.\n",
-    "*   **Optimize for the task**: Summaries are great for search, but maybe not for deep dives.\n",
+    "Key Takeaways:\n",
+    "1. Clean your data: Remove database artifacts.\n",
+    "2. Transform your data: Use formats that are token-efficient.\n",
+    "3. Optimize for the task: Summaries are great for search, but maybe not for deep dives.\n",
     "\n",
     "### Next Lesson: Hierarchical Retrieval\n",
     "In **Stage 3**, we will solve the \"Flat Retrieval\" problem. We will build a \"Smart\" agent that:\n",
-    "1.  Retrieves summaries first (like Stage 2).\n",
-    "2.  Decides which course is most relevant.\n",
-    "3.  Fetches the **full syllabus** for *only* that course.\n",
+    "1. Retrieves summaries first (like Stage 2).\n",
+    "2. Decides which course is most relevant.\n",
+    "3. Fetches the **full syllabus** for *only* that course.\n",
     "\n",
     "This gives us the best of both worlds: Low token usage *and* high detail when needed.\n",
     "\n",
     "See you in Stage 3!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4382b127",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Optional: Cleanup\n",
-    "# from agent import cleanup_courses\n",
-    "# await cleanup_courses(course_manager)"
    ]
   }
  ],
