--- a/section-1-context-engineering-foundations/01_Introduction_to_context_engineering.ipynb
+++ b/section-1-context-engineering-foundations/01_Introduction_to_context_engineering.ipynb
@@ -74,7 +74,7 @@
    "metadata": {},
    "source": [
     "<details>\n",
-    "  <summary>Click the dropdown to review the conversation with the agent</summary>\n",
+    "  <summary>🔶 Click the dropdown to review the conversation with the agent</summary>\n",
     "  \n",
     "**Turn 1:**\n",
     "\n",
@@ -140,7 +140,7 @@
    "metadata": {},
    "source": [
     "<details>\n",
-    "    <summary> Click the dropdown to review the conversation with the agent with proper context management </summary>\n",
+    "    <summary>🔶 Click the dropdown to review the conversation with the agent with proper context management </summary>\n",
     "\n",
     "**Turn 1:**\n",
     "\n",
@@ -236,7 +236,7 @@
     "3. Conversation context\n",
     "4. Retrieved context \n",
     "\n",
-    "Each of these types plays a crucial role in making sure that an AI system has what it needs to properly respond. In this section, we'll explore each context type in more detail and setup a sample context to call a LLM. As you go through, make sure to run each code block that is provided as we build up the context and send it to a LLM at the end."
+    "Each of these types plays a crucial role in making sure that an AI system has what it needs to properly respond. In this section, we'll explore each context type in more detail and setup a sample context to call a LLM (OpenAI). As you go through, make sure to run each code block that is provided as we build up the context and send it to a LLM at the end."
    ]
   },
   {
@@ -253,7 +253,7 @@
     "- Domain knowledge and business rules (\"CS401 requires CS301\")\n",
     "- Behavioral guidelines (\"Ask one clarifying question at a time\")\n",
     "\n",
-    "An example of system context (also commonly called the system prompt) for our Redis University agent, might look like the following:"
+    "Below is an example of system context (also commonly called the system prompt) for our Redis University agent. Run the codeblock to create the context. We'll use it shortly when we assemble the full context."
    ]
   },
   {
@@ -269,7 +269,10 @@
     "2. Consider the student's background, completed courses, and interests\n",
     "3. Ensure prerequisites are met before recommending advanced courses\n",
     "4. Be encouraging and supportive in your guidance\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "\n",
+    "print(\"✅ System context created successfully!\")\n",
+    "print(system_context)"
    ]
   },
   {
@@ -286,7 +289,7 @@
     "- History and achievements (\"completed CS101/CS201/Calc I\")\n",
     "- Goals and constraints (\"Tue/Thu availability\")\n",
     "\n",
-    "We have already seen an example of user context when we defined the user profile and preferences for Olivia: "
+    "We have already seen an example of user context when we defined the user profile and preferences for Olivia earlier. Run the code block below to create the sample profile in the notebook. "
    ]
   },
   {
@@ -295,9 +298,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 1: Create a user profile as a dictionary\n",
-    "# Note: In production, this would come from a database, here, we hardcode it for demonstration purposes\n",
-    "\n",
     "olivia_profile = {\n",
     "    \"name\": \"Olivia Jansen\",\n",
     "    \"background\": \"Python developer, 2 years experience\",\n",
@@ -305,14 +305,26 @@
     "    \"interests\": [\"machine learning\", \"data science\", \"vector search\"],\n",
     "    \"time_availability\": \"evenings and weekends\",\n",
     "    \"goal\": \"Build a RAG system for my company's documentation\",\n",
-    "}"
+    "}\n",
+    "\n",
+    "print(\"✅ User context for Olivia created successfully!\")\n",
+    "print(olivia_profile)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note: In production, the above, would likely from a database, but we have hardcoded it above for demonstration purposes. Additionally, we would likely write a function to construct this profile for our context. Something like this:"
+    "Note that in production, the above context would likely come from a database, but we have hardcoded it above for demonstration purposes. \n",
+    "\n",
+    "The OpenAI API requires message content to be a string, so we need to convert our dictionary to text. We have two options:\n",
+    "\n",
+    "1. Send it as JSON string: `json.dumps(olivia_profile)`\n",
+    "2. Format it as natural language: Use a formatting function for better readability and control\n",
+    "\n",
+    "We'll use option 2 because it's more readable and gives us precise control over how the information is presented to the LLM. This type of data transformation — converting structured data into LLM-friendly formats — is actually a core context engineering technique that we'll explore in further detail throughout this course.\n",
+    "\n",
+    "Now, run the code block below to create the function and format Olivia's profile."
    ]
   },
   {
@@ -333,7 +345,7 @@
     "\"\"\"\n",
     "\n",
     "user_context = format_user_context(olivia_profile)\n",
-    "print(user_context)"
+    "print(\"Formatted Context:\", user_context)"
    ]
   },
   {
@@ -342,7 +354,7 @@
    "source": [
     "### 3. Conversation Context: \"What Have We Discussed?\"\n",
     "\n",
-    "Conversation context is one of the most important parts of context since it represents the history of the current conversation. Typically this is implemented in the form of short-term memory. It is dynamic, session-specific, and will grow over time. \n",
+    "Conversation context is one of the most important parts of context since it represents the history of the current conversation. Typically this is implemented in the form of memory. It is dynamic, session-specific, and will grow over time. \n",
     "\n",
     "It typically contains: \n",
     "- Previous user messages\n",
@@ -366,7 +378,9 @@
     "[Current query - needs context from Turn 2 to understand \"that path\"]\n",
     "```\n",
     "\n",
-    "Let's examine a simple implementation of conversation context: "
+    "In this notebook, since we don't have a chat interface, we're going to simulate conversation history by manually creating a list of message dictionaries. In a real application, this list would be dynamically built as users interact with the system, but here we'll pre-populate it to demonstrate how conversation context works.\n",
+    "\n",
+    "Examine and then run the following codeblock (it will execute silently as we will observe it in the next codeblock):"
    ]
   },
   {
@@ -397,7 +411,7 @@
     "# Step 4: Add a follow-up question that references previous context\n",
     "conversation_history.append(\n",
     "    {\"role\": \"user\", \"content\": \"How long will that take me to complete?\"}\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -424,7 +438,7 @@
    "source": [
     "### 4. Retrieved Context: \"What Information Is Relevant?\"\n",
     "\n",
-    "Lastly, there is retrieved context. This is information fetched on-demand based on the current query. This involves the system retrieving specific and relevant context across other systems. It is dynamic and highly targeted. \n",
+    "Lastly, there is retrieved context. This is information fetched on-demand based on the current query. This involves the system retrieving specific and relevant context across other systems.\n",
     "\n",
     "It typically contains: \n",
     "- Database records (course details, schedules)\n",
@@ -434,7 +448,7 @@
     "\n",
     "For example, if a student asked the Redis University agent about \"CS301\", the system would need to find any relevant context to respond to the query. For instance, it would call a course catalog database, find the CS301 course and retrieve information like course details (description, prerequisites, format), current availability (X seats in online section), and professor ratings and reviews.\n",
     "\n",
-    "Let's simulate what retrieved context will look like:"
+    "Let's simulate what retrieved context will look like by hard-coding course content. Run the codeblock below:"
    ]
   },
   {
@@ -443,8 +457,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 1: Simulate a course database\n",
-    "# In production, this would be Redis, etc.\n",
     "course_database = {\n",
     "    \"RU101\": {\n",
     "        \"title\": \"Introduction to Redis Data Structures\",\n",
@@ -495,7 +507,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's simulate retrieving course information based on a query."
+    "Now let's simulate retrieving course information based on a query. Just like before, we'll need to transform the data. Run the code block below to create the function and simulate the retrieval."
    ]
   },
   {
@@ -565,7 +577,7 @@
     "└─────────────────────────────────────────────┘\n",
     "```\n",
     "\n",
-    "Let's add them together:"
+    "Let's add them together into a messages list:"
    ]
   },
   {
@@ -584,14 +596,21 @@
     "messages.extend(conversation_history)\n",
     "\n",
     "# Step 4: Add retrieved context\n",
-    "messages.append({\"role\": \"system\", \"content\": retrieved_context})"
+    "messages.append({\"role\": \"system\", \"content\": retrieved_context})\n",
+    "\n",
+    "# Check the final messages structure\n",
+    "for i, msg in enumerate(messages, 1):\n",
+    "    print(f\"Message {i} ({msg['role']}):\")\n",
+    "    print(f\"{msg['content']}\\n\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And now, we can use the context to call the LLM:"
+    "Finally, we can use the context to call the LLM:\n",
+    "\n",
+    "> ⚠️ Note: You'll need your own [OpenAI API](https://platform.openai.com/api-keys) key to make the LLM call. Make sure to replace it in the code block below before running it."
    ]
   },
   {
@@ -609,7 +628,7 @@
     "load_dotenv()\n",
     "\n",
     "# Initialize OpenAI client\n",
-    "client = OpenAI(api_key=os.getenv(\"OPENAI_API_KEY\"))\n",
+    "client = OpenAI(api_key=\"OPENAI_API_KEY\")\n",
     "\n",
     "# Make the LLM call with complete context\n",
     "response = client.chat.completions.create(\n",
@@ -625,7 +644,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The LLM received all four context types and used them to generate a personalized response:\n",
+    "And there ya go! We sent an assembled context to the LLM. It received all four context types and used them to generate a personalized response:\n",
     "\n",
     "1. **System Context** told it to act as a course advisor and provided course information\n",
     "2. **User Context** gave it Sarah's background, interests, and goals\n",
@@ -638,8 +657,9 @@
     "- Relates the duration to her specific situation\n",
     "- Stays aligned with her goal of building a RAG system\n",
     "\n",
-    "When building complex AI systems, you'll be working with all four of these context types and will have to find ways to engineer them to make the system more effective. \n",
-    "That said, every model has one the bottleneck never moves: what fits in the model’s context window."
+    "While this was a simple example, it demonstrated all four layers of context that we will be managing throughout this course. As we build more complex agents, these same principles will apply — but the techniques for managing, optimizing, and orchestrating these contexts will become increasingly sophisticated.\n",
+    "\n",
+    "Yet even with perfect context engineering, every AI system hits the same wall: the finite size of the model's context window. Let's explore this fundamental constraint next."
    ]
   },
   {
