small fixes for readme and notebook 1

--- a/section-1-context-engineering-foundations/01_Introduction_to_context_engineering.ipynb
+++ b/section-1-context-engineering-foundations/01_Introduction_to_context_engineering.ipynb
@@ -448,7 +448,7 @@
     "\n",
     "For example, if a student asked the Redis University agent about \"CS301\", the system would need to find any relevant context to respond to the query. For instance, it would call a course catalog database, find the CS301 course and retrieve information like course details (description, prerequisites, format), current availability (X seats in online section), and professor ratings and reviews.\n",
     "\n",
-    "Let's simulate what retrieved context will look like by hard-coding course content. Run the codeblock below:"
+    "Let's simulate what retrieved context will look like by hard-coding course content. Run the codeblock below (it will execute silently):"
    ]
   },
   {
@@ -644,7 +644,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And there ya go! We sent an assembled context to the LLM. It received all four context types and used them to generate a personalized response:\n",
+    "To recap what just happened, we sent an assembled context to the LLM. It received all four context types and used them to generate a personalized response:\n",
     "\n",
     "1. **System Context** told it to act as a course advisor and provided course information\n",
     "2. **User Context** gave it Sarah's background, interests, and goals\n",
