adding setup code for notebook 03 to work in collab

--- a/section-1-context-engineering-foundations/03_stage_0_crafting_effective_system_prompts.ipynb
+++ b/section-1-context-engineering-foundations/03_stage_0_crafting_effective_system_prompts.ipynb
@@ -10,13 +10,12 @@
     "\n",
     "## Introduction\n",
     "\n",
-    "Welcome to Stage 0 of the course. Before we build complex retrieval systems, we need to define who our agent is. In this preliminary stage, we'll focus on the foundation of all context: **System Instructions**.\n",
+    "Welcome to Stage 0. Before we dive into building complex retrieval systems, we need to define who our agent is. In this preliminary stage, we'll focus on the foundation of all context: system context.\n",
     "\n",
-    "More specifically, we'll do the following:\n",
+    "By the end of this notebook, you will be able to:\n",
     "\n",
-    "1.  **Define Identity**: Learn how to set the agent's role, capabilities, and constraints.\n",
-    "2.  **Experiment with Prompts**: See firsthand how different system instructions change the agent's behavior.\n",
-    "3.  **Apply to the Agent**: Use a special hook to inject your custom system prompt into our Stage 1 Baseline Agent.\n",
+    "1.  Define system context: Understand how to set an agent's role, capabilities, and constraints through system instructions.\n",
+    "2.  Evaluate system prompt effectiveness: You'll experiment with different system instructions and observe how they change agent behavior.\n",
     "\n",
     "Let's dive in."
    ]
@@ -29,30 +28,25 @@
     "\n",
     "### What Are System Instructions?\n",
     "\n",
-    "System instructions (also called system prompts) are the **persistent context** that defines your agent's identity and behavior. They are included in every conversation turn and tell the LLM:\n",
+    "System instructions (also called system prompts) are the *persistent context* that defines your agent's identity and behavior. They are included in every conversation turn and tell the LLM:\n",
     "\n",
     "1.  **Who it is** - Role and identity\n",
     "2.  **What it can do** - Capabilities and tools\n",
     "3.  **How it should behave** - Personality and constraints\n",
-    "4.  **What it knows** - Domain knowledge and context\n",
-    "\n",
-    "### System Context vs. Retrieved Context\n",
-    "\n",
-    "| System Context | Retrieved Context |\n",
-    "| :--- | :--- |\n",
-    "| **Static** - Same for every turn | **Dynamic** - Changes per query |\n",
-    "| **Role & behavior** | **Specific facts** |\n",
-    "| **Always included** | **Conditionally included** |\n",
-    "| **Examples:** Agent role, capabilities, guidelines | **Examples:** Course details, user preferences, memories |"
+    "4.  **What it knows** - Domain knowledge and context"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Setup and Initialization\n",
+    "## Setup\n",
     "\n",
-    "First, let's set up our environment. We need to import the agent code from the `progressive_agents` directory."
+    "First, let's set up our environment. For this notebook, we're using the Stage 1 Baseline RAG agent as our foundation (located in the `/progressive_agents` directory). Don't worry about the internals yet — it's a basic retrieval pipeline that searches for courses and generates responses. We'll dive deep into how it works in the next notebook.\n",
+    "\n",
+    "The key thing to understand here is that we're importing a special function called `set_system_instructions`. This hook allows us to dynamically override the agent's system prompt without modifying the source code — perfect for experimenting!\n",
+    "\n",
+    "Run the code block below to initialize the agent and load sample course data into Redis."
    ]
   },
   {
@@ -65,11 +59,29 @@
     "import os\n",
     "import asyncio\n",
     "from pathlib import Path\n",
-    "from dotenv import load_dotenv\n",
     "\n",
-    "# 1. Configure Paths\n",
+    "# 1. Setup for Google Colab\n",
+    "print(\"Setting up Colab environment...\")\n",
+    "\n",
+    "# Clone the repository if it doesn't exist\n",
+    "if not os.path.exists(\"ce-redis-langchain\"):\n",
+    "    print(\"Cloning repository...\")\n",
+    "    !git clone https://github.com/redislabs-training/ce-redis-langchain.git\n",
+    "\n",
+    "# Install dependencies\n",
+    "print(\"Installing dependencies...\")\n",
+    "!pip install -q langchain langchain-openai redis nest_asyncio python-dotenv\n",
+    "\n",
+    "# Install and start Redis server\n",
+    "print(\"Installing and starting Redis server...\")\n",
+    "!apt-get install -y redis-server > /dev/null\n",
+    "!service redis-server start\n",
+    "\n",
+    "# Set project root\n",
+    "project_root = Path(\"/content/ce-redis-langchain\").resolve()\n",
+    "\n",
+    "# 2. Configure Paths\n",
     "# We point to 'stage1_baseline_rag' to use the baseline agent\n",
-    "project_root = Path(\"../../\").resolve()\n",
     "stage1_path = project_root / \"progressive_agents\" / \"stage1_baseline_rag\"\n",
     "sys.path.append(str(stage1_path))\n",
     "\n",
@@ -77,11 +89,21 @@
     "src_path = project_root / \"src\"\n",
     "sys.path.append(str(src_path))\n",
     "\n",
-    "# 2. Load Environment Variables\n",
-    "load_dotenv(project_root / \".env\")\n",
+    "# 3. Apply nest_asyncio for Jupyter environments\n",
+    "import nest_asyncio\n",
+    "nest_asyncio.apply()\n",
+    "\n",
+    "# 4. Load Environment Variables\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv() \n",
+    "\n",
+    "# 5. Set API Key\n",
+    "if \"OPENAI_API_KEY\" not in os.environ:\n",
+    "    os.environ[\"OPENAI_API_KEY\"] = \"FILL IN YOUR OPENAI API KEY HERE\"\n",
     "\n",
     "print(f\"Project Root: {project_root}\")\n",
-    "print(f\"Agent Path Added: {stage1_path}\")"
+    "print(f\"Agent Path Added: {stage1_path}\")\n",
+    "print(f\"Src Path Added: {src_path}\")"
    ]
   },
   {
@@ -97,19 +119,6 @@
     "# We use the Stage 1 baseline agent, but we will override its system prompt\n",
     "workflow, course_manager = setup_agent(auto_load_courses=True)\n",
     "print(\"Agent is ready!\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Initialize the Agent\n",
-    "We will use the `setup_agent` helper. This function performs a crucial step:\n",
-    "*   It connects to your Redis instance.\n",
-    "*   It checks if the course data exists.\n",
-    "*   If not, it generates 50 sample courses and loads them into Redis.\n",
-    "\n",
-    "*Note: This might take a few seconds the first time you run it.*"
    ]
   },
   {
